src/components/Preview/Preview.module.scss
@use '../../scss/variables' as *;

.preview {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100dvh;
  color: $transparent-white;
}

.author {
  width: 250px;
  height: 250px;
  margin-bottom: 55px;
  opacity: 0;

  @media (max-width: 768px) {
    width: 200px;
    height: 200px;
    margin-bottom: 35px;
  }

  @media (max-width: 425px) {
    width: 150px;
    height: 150px;
    border-width: 2px;
    margin-bottom: 25px;
  }

  @media (max-height: 710px) and (max-width: 768px) {
    width: 180px;
    height: 180px;
    margin-bottom: 15px;
  }
  @media (max-height: 710px) and (max-width: 425px) {
    width: 150px;
    height: 150px;
    margin-bottom: 15px;
  }
  @media (max-height: 568px) and (max-width: 768px) {
    display: none;
  }
  @media (max-height: 600px) and (min-width: 768px) {
    display: none;
  }
}
.info {
  opacity: 0;
}

.image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 50%;
  border: 3px solid $white;

  -webkit-filter: brightness(0.9);
  filter: brightness(0.9);
  transition: opacity 0.3s ease-in-out;
}
.imageHidden {
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
}

.title {
  margin-bottom: 35px;
  font-size: 64px;
  font-weight: 600;
  text-align: center;
  color: $white;
  transition: opacity 0.3s ease-in-out;

  @media (max-width: 768px) {
    font-size: 46px;
    margin-bottom: 25px;
    padding: 0 30px;
  }
  @media (max-width: 425px) {
    font-size: 33px;
    margin-bottom: 15px;
    padding: 0 15px;
  }

  @media (max-height: 368px) and (max-width: 768px) {
    margin-bottom: 10px;
    font-size: 35px;
  }
}
.titleHidden {
  @media (max-height: 710px) {
    opacity: 0;
    transition: opacity 0.3s ease-in-out;
  }
}

.subtitle {
  max-width: 800px;

  opacity: 0;
  will-change: opacity, visibility;
  transition: opacity 2s ease;

  font-size: 32px;
  font-weight: 500;
  text-align: center;
  line-height: 45px;

  @media (max-width: 768px) {
    max-width: 600px;
    height: 150px;
    font-size: 23px;
    line-height: 40px;
    padding: 0 30px;
  }
  @media (max-width: 425px) {
    padding: 0 15px;
  }

  // max-height
  @media (max-height: 710px) {
    height: 100px;
  }

  @media (max-height: 368px) and (max-width: 768px) {
    font-size: 20px;
    line-height: 35px;
    height: 80px;
  }
}

.subtitle.visible {
  opacity: 1;
}

.arrow {
  position: absolute;
  bottom: 0;

  -webkit-animation: arrowAction 3s ease-in-out infinite;

  animation: arrowAction 3s ease-in-out infinite;
  a {
    display: block;
    padding: 20px;
    opacity: 0;
    svg {
      fill: $active;
      width: 40px;
      height: 40px;

      @media (max-width: 768px) {
        width: 30px;
        height: 30px;
      }
      @media (max-width: 425px) {
        width: 20px;
        height: 20px;
      }

      @media (max-height: 368px) and (max-width: 768px) {
        width: 25px;
        height: 25px;
      }
    }
  }

  @media (max-height: 480px) {
    display: none;
  }
  @media (min-height: 590px) {
    display: none;
  }
  @media (min-height: 650px) {
    display: block;
  }
}

@-webkit-keyframes arrowAction {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-30px);
    opacity: 0.5;
  }
  100% {
    transform: translateY(0);
  }
}

@keyframes arrowAction {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-30px);
    opacity: 0.5;
  }
  100% {
    transform: translateY(0);
  }
}

